show gedcom errors&warnings dialog on file open